appium: preview AsciiDoc in app